issue-4: Updated id of input. Change of project to a search for restaurants in an area. Need to try and get 401 to work

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="col s9">
                 <form>
                     <div class="input-field">
-                        <input id="search" type="search" class="grey" placeholder="Search for your destination"
+                        <input id="searchCity" type="search" class="grey" placeholder="Search for your destination"
                             required>
                         <i class="material-icons ">close</i>
                         <button class="btn waves-effect waves-light" type="submit" name="action">Submit
