--- a/index.html
+++ b/index.html
@@ -86,6 +86,18 @@
             </div>
         </div>
     </div>
+
+<!-- Modal: triggers when status text for API is not ok-->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4 id="modal-title"></h4>
+      <p>An error occured. Please try again!</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Okay!</a>
+    </div>
+  </div>
+
     <footer class="page-footer">
         <div class="container">
             <div class="row">
