issue-6:changed search bar to select dropdown and added initialization

--- a/index.html
+++ b/index.html
@@ -23,9 +23,20 @@
             <div class="col s9">
                 <form>
                     <div class="input-field">
-                        <input id="searchCity" type="search" class="grey" placeholder="Search for your destination"
-                            required>
-                        <i class="material-icons ">close</i>
+                        <select>
+                            <option value=" " disabled selected>Pick Your New Addiction</option>
+                            <option value="hardcover-fiction">Hardcover Fiction</option>
+                            <option value="hardcover-nonfiction">Hardcover Nonfiction</option>
+                            <option value="hardcover-advice">Hardcover Advice</option>
+                            <option value="hardcover-graphic-books">Hardcover Graphic Books</option>
+                            <option value="manga">Manga</option>
+                            <option value="chapter-books">Children's CHapter Books</option>
+                            <option value="childrens-middle-grade">Children's Middle Grade</option>
+                            <option value="picture-books">Children's Picture Books</option>
+                            <option value="series-books">Children's Series</option>
+                            <option value="young-adult">Young Adult</option>
+                            <option value="recipes">Recipe Books</option>
+                        </select>
                         <button class="btn waves-effect waves-light" type="submit" name="action">Submit
                         </button>
                     </div>
