Added powered by new york times img for footer and added to html

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
   
     <footer class="page-footer">
         <img src="./assets/images/powered_by_google_on_non_white.png" alt="">
+        <img src="./assets/images/poweredby_nytimes_200c.png" alt="">
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
