for loop started

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="page-footer">
 
-        <h1 class="center page-title">Travel Boiz!</h1>
+        <h1 class="center page-title">Book Boiz!</h1>
         <div class="row">
             <div class="col s3">
             </div>
@@ -22,14 +22,14 @@
                 <form>
                     <div class="input-field">
 
-                        <select>
+                        <select id="genre-choice" onchange="getBookData()">
                             <option value=" " disabled selected>Pick Your New Addiction</option>
                             <option value="hardcover-fiction">Hardcover Fiction</option>
                             <option value="hardcover-nonfiction">Hardcover Nonfiction</option>
                             <option value="hardcover-advice">Hardcover Advice</option>
                             <option value="hardcover-graphic-books">Hardcover Graphic Books</option>
                             <option value="manga">Manga</option>
-                            <option value="chapter-books">Children's CHapter Books</option>
+                            <option value="chapter-books">Children's Chapter Books</option>
                             <option value="childrens-middle-grade">Children's Middle Grade</option>
                             <option value="picture-books">Children's Picture Books</option>
                             <option value="series-books">Children's Series</option>
@@ -51,42 +51,42 @@
             <div class="col s12 m4">
                 <div class="card hoverable">
                     <div class="card-image">
-                        <img id="book-img-one" src="">
-                        <span id="book-title-one" class="card-title"></span>
+                        <img id="book-img-0" src="">
+                        <span id="book-title-0" class="card-title"></span>
                     </div>
                     <div class="card-content">
-                        <p id="book-desc-one"></p>
+                        <p id="book-desc-0"></p>
                     </div>
                     <div class="card-action">
-                        <a id="book-buy-one" href="#">Link to Amazon</a>
+                        <a id="book-buy-0" href="#">Link to Amazon</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card hoverable">
                     <div class="card-image">
-                        <img id="book-img-two" src="">
-                        <span id="book-title-two" class="card-title"></span>
+                        <img id="book-img-1" src="">
+                        <span id="book-title-1" class="card-title"></span>
                     </div>
                     <div class="card-content">
-                        <p id="book-desc-two"></p>
+                        <p id="book-desc-1"></p>
                     </div>
                     <div class="card-action">
-                        <a id="book-buy-two" href="#">Link to Amazon</a>
+                        <a id="book-buy-1" href="#">Link to Amazon</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card hoverable">
                     <div class="card-image">
-                        <img id="book-img-three" src="">
-                        <span id="book-title-three" class=" card-title"></span>
+                        <img id="book-img-2" src="">
+                        <span id="book-title-2" class=" card-title"></span>
                     </div>
                     <div class="card-content">
-                        <p id="book-desc-three"></p>
+                        <p id="book-desc-2"></p>
                     </div>
                     <div class="card-action">
-                        <a id="book-buy-three" href="#">Link to Amazon</a>
+                        <a id="book-buy-2" href="#">Link to Amazon</a>
                     </div>
                 </div>
             </div>
@@ -95,14 +95,14 @@
             <div class="col s12 m4">
                 <div class="card hoverable">
                     <div class="card-image">
-                        <img id="book-img-four" src="">
-                        <span id="book-title-four" class="card-title"></span>
+                        <img id="book-img-3" src="">
+                        <span id="book-title-3" class="card-title"></span>
                     </div>
                     <div class="card-content">
-                        <p id="book-desc-four"></p>
+                        <p id="book-desc-3"></p>
                     </div>
                     <div class="card-action">
-                        <a id="book-buy-four" href="#">Link to Amazon</a>
+                        <a id="book-buy-3" href="#">Link to Amazon</a>
                     </div>
 
                 </div>
@@ -110,28 +110,28 @@
             <div class="col s12 m4">
                 <div class="card hoverable">
                     <div class="card-image">
-                        <img id="book-img-five" src="">
-                        <span id="book-title-five" class="card-title"></span>
+                        <img id="book-img-4" src="">
+                        <span id="book-title-4" class="card-title"></span>
                     </div>
                     <div class="card-content">
-                        <p id="book-desc-five"></p>
+                        <p id="book-desc-4"></p>
                     </div>
                     <div class="card-action">
-                        <a id="book-buy-five" href="#">Link to Amazon</a>
+                        <a id="book-buy-4" href="#">Link to Amazon</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m4">
                 <div class="card hoverable">
                     <div class="card-image">
-                        <img id="book-img-six" src="">
-                        <span id="book-title-six" class=" card-title"></span>
+                        <img id="book-img-5" src="">
+                        <span id="book-title-5" class=" card-title"></span>
                     </div>
                     <div class="card-content">
-                        <p id="book-desc-six"></p>
+                        <p id="book-desc-5"></p>
                     </div>
                     <div class="card-action">
-                        <a id="book-buy-six" href="#">Link to Amazon</a>
+                        <a id="book-buy-5" href="#">Link to Amazon</a>
                     </div>
                 </div>
             </div>
