--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Book Boiz</title>
+    <title>TheBestSellers</title>
 </head>
 
 <body>
     <header class="page-footer">
 
-        <h1 class="center page-title">Book Boiz!</h1>
+        <h1 class="center page-title">TheBestSellers</h1>
         <div class="row">
             <div class="col s3">
             </div>
@@ -23,7 +23,7 @@
                     <div class="input-field">
 
                         <select id="genre-choice" onchange="getBookData()">
-                            <option value=" " disabled selected>Pick The BestsellerList</option>
+                            <option value=" " disabled selected>Pick The Best Seller List</option>
                             <option value="hardcover-fiction">Hardcover Fiction</option>
                             <option value="hardcover-nonfiction">Hardcover Nonfiction</option>
                             <option value="hardcover-advice">Hardcover Advice</option>
